--- a/AppConfigs/TestRobot/FrameWorks/FrameworksPaths.properties
+++ b/AppConfigs/TestRobot/FrameWorks/FrameworksPaths.properties
@@ -1,3 +1,3 @@
-Appium.WinDriver.path = C:\\Program Files (x86)\\Windows Application Driver
-Appium.WinDriver.startCommand = WinAppDriver.exe localhost 4723/wd/hub
-Appium.WinDriver.hub = http://localhost:4723/wd/hub
+WinDriver.path=\\AppConfigs\\TestRobot\\Scripts\\
+WinDriver.startCommand=runAppium.bat
+WinDriver.hub=http://localhost:4723/wd/hub
