--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,14 @@
       <artifactId>spring-beans</artifactId>
       <version>5.2.3.RELEASE</version>
     </dependency>
-
+      <!-- https://mvnrepository.com/artifact/com.sun.jna/jna -->
+    <!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna -->
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>5.5.0</version>
+    </dependency>
   </dependencies>
-
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
